2003-12-16  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (set_signal_mask): Report on input argument rather than
	getsigmask.

	* fhandler.h (fhandler_base): Make friends with close_all_files.
	* pinfo.cc (_pinfo::set_ctty): Add more debugging.
	* sigproc.cc (proc_can_be_signalled): Detect state when signal handler
	thread is gone in target process as an EPERM situation.  Set errno to
	ESRCH if process doesn't exist.
	(sigproc_terminate): Set sendsig to illegal value when closed.
	(sig_send): Rely on proc_can_be_signalled setting the proper errno.
	* syscalls.cc (close_all_files): Detect when all ttys are closed prior
	to calling close_all_files.  The ctty needs to be closed explicitly in
	this case.

2003-12-16  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/ipc.h: Include sys/types.h.

2003-12-15  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.cc (pthread::init_main_thread): Make sure that the main thread
	has valid handles.
	(pthread::create_cancel_event): Fix error message.

2003-12-14  Christopher Faylor  <cgf@redhat.com>

	* winsup.h (access_worker): Declare with added fhandler_base parameter.
	* syscalls.cc (access_worker): Accommodate extra fhandler_base
	argument.  Use it instead of stat_worker to determine stat information,
	when appropriate.
	* fhandler.cc (fhandler_base::device_access_denied): Pass fhandler
	pointer to access_worker so that it can use the proper method for
	determining stat information.
	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Ditto.
	* path.cc (path_conv::check): Add read-only attribute to /cygdrive
	default settings.

2003-12-14  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (ctrl_c_handler): Remove this thread from the signal
	handler chain.

2003-12-14  Christopher Faylor  <cgf@redhat.com>

	* cygthread.cc (cygthread::stub): Revert previous change and again
	subsume cygthread::stub2.  Just return from function now since
	ExitThread is guaranteed by automatic _threadinfo wrapper.  Define as